Se agrega el link de botones y videos

--- a/Contactame.html
+++ b/Contactame.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section id="contacto">
+    <Header id="contacto">
         <div class="Gurdar">
             <h2>Contacteme</h2>
             <p>
@@ -21,12 +21,12 @@
                 en cualquier coso donde se nesite mi apoyo.
             </p>
             <div class="contacto1">
-                <div style="text-align: center" ; class="contacto-img">
+                <nav style="text-align: center" ; class="contacto-img">
                     <img src="img/mensaje.jpg" width="300" height="300" alt="" />
-                </div>
+                </nav>
                 <div class="contacto-img2">
                     <h4>ESCRIBEME</h4>
-                    <form action="">
+                    <section action="">
                         <div class="formagrupal">
                             <label for="name">Nombre<br></label>
                             <input type="text" class="formacontrol" />
@@ -40,9 +40,9 @@
                             <textarea name="message" id="" cols="30" rows="10" class="formacontrol"></textarea>
                         </div>
                         <button class="btn4">Enviar</button>
-                    </form>
+                    </section>
                 </div>
-    </section>
+    </Header>
 </body>
 
 </html>
