--- a/Habilidades.html
+++ b/Habilidades.html
@@ -16,7 +16,7 @@
         }
     </style>
 </head>
-
+<header>
 <body>
     <nav id="Habilidades">
         <div class="Habilidad">
@@ -25,22 +25,21 @@
                 Lo que les presento en esta parte son las habilidades que tengo,
                 cpara ofrecer en caso de algún trabajo!
             </p>
+        </section>
         </div>
         <ul>
-        <div class="Imagenes">
+        <nav class="Imagenes">
             <a href="#">Interpretación<img src="img/Interpretar.jpg" width="200" height="200" alt="" /></a>
             <a href="#">Cambiar<img src="img/cambio.jpg" width="200" height="200" alt="" /></a>
             <a href="#">Diseñar<img src="img/Diseñar.jpg" width="200" height="200" alt="" /></a>
-        </div>
-        <div class="Imagenes">
+        </nav>
+        <nav class="Imagenes">
             <a href="#">Interdiciplinado<img src="img/Inter.jpg" width="200" height="200" alt="" /></a>
             <a href="#">Creativo<img src="img/Creativo.jpg" width="200" height="200" alt="" /></a>
             <a href="#">Analiza<img src="img/analiza.png" width="200" height="200" alt="" /></a>
-        </div>
+        </nav>
     </ul>
         </div>
-    </nav>
-
+</header>
 </body>
-
 </html>
