--- a/Index.html
+++ b/Index.html
@@ -15,12 +15,12 @@
 <body>
     <header id="GENERAL">
         <nav id="menu">
-            <div class= "contenedor">
+            <div class="contenedor">
                 <label>Mi portafolio</label>
                 <ul>
-                    <li><a href="" class="btn btn1">Habilidades</a></li>
-                    <li><a href="" class="btn btn2">You tube</a></li>
-                    <li><a href="" class="btn btn3">Contactame</a></li>
+                    <li><a href="Habilidades.html" class="btn btn1">Habilidades</a></li>
+                    <li><a href="Youtube.html" class="btn btn2">You tube</a></li>
+                    <li><a href="Contactame.html" class="btn btn3">Contactame</a></li>
                 </ul>
             </div>
         </nav>
@@ -34,20 +34,20 @@
                             Puerto, la cual curso la carrera de ingenieria en sistemas computacionales,
                             estoy en quinto semestre.</p>
                     </div>
-                    <div class="title-img"> </div>
-                    <img src="img/Myfoto.jpeg" width="400" height="400" alt="">
+                    <section class="title-img">
+                        <img src="img/Myfoto.jpeg" width="400" height="400" alt="">
+                    </section>
                 </div>
             </div>
-        </div>
-        <div class="Redessociales">
-            <footer>
-                <p>&copy;2022 Ricardo Tamay Canche</p>
-                <a link href="https://twitter.com"><img src="img/twitter-wrap.png" alt="Twitter logo"
-                        class="icono-social"></a>
-                <a link href="https://facebook.com"><img src="img/facebook-wrap.png" alt="Facebook logo"
-                        class="icono-social"></a>
-            </footer>
-        </div>
+            <div class="Redessociales">
+                <footer>
+                    <p>&copy;2022 Ricardo Tamay Canche</p>
+                    <a link href="https://twitter.com"><img src="img/twitter-wrap.png" alt="Twitter logo"
+                            class="icono-social"></a>
+                    <a link href="https://facebook.com"><img src="img/facebook-wrap.png" alt="Facebook logo"
+                            class="icono-social"></a>
+                </footer>
+            </div>
     </header>
 </body>
 
