--- a/Youtube.html
+++ b/Youtube.html
@@ -16,36 +16,37 @@
         }
     </style>
 </head>
+<Header>
 
-<body>
-    <nav id="Youtube">
-        <div class="videos">
-            <h2>MIS TRABAJOS</h2>
-            <p>
-                Les presentare mis trabajos que he desarrollado a lorgo de semestre de primero a
-                quinto semestre.
-            </p><br>
-            <ul>
-                <div style="text-align: center" , class="Imagenes">
-                    <a href="#">Elementos de un sistema<br><img src="img/Imagen1.png" width="200"
-                            height="200" /><br></a>
-                    <a href="#">Codificador de 7 segmentos<br><img src="img/Imagen2.jpg" width="200" height="200"
-                            alt="" /><br></a>
-                    <a href="#">Acceso en datos en java<br><img src="img/Imagen3.jpg" width="200" height="200"
-                            alt="" /><br></a>
-                </div>
-                <div style="text-align: center" class="Imagenes">
-                    <a href="#">Fuente de Voltaje<br>
-                        <img src="img/imagen4.webp" width="200" height="200" alt="" /><br></a></li>
-                    <a href="#">Paquete Librerías<br><img src="img/imagen5.webp" width="200" height="200"
+    <body>
+        <nav id="Youtube">
+            <div class="videos">
+                <h2>MIS TRABAJOS</h2>
+                <p>
+                    Les presentare mis trabajos que he desarrollado a lorgo de semestre de primero a
+                    quinto semestre.
+                </p><br>
+                <ul>
+                    <div style="text-align: center" , class="Imagenes">
+                        <a href="https://youtu.be/b18dj_15Rxs">Elementos de un sistema<br><img src="img/Imagen1.png" width="200"
+                                height="200" /><br></a>
+                        <a href="https://youtu.be/8tWIkkdoCfU">Codificador de 7 segmentos<br><img src="img/Imagen2.jpg" width="200" height="200"
                                 alt="" /><br></a>
-                    <a href="#">Linea de tiempo<br><img src="img/imagen6.webp" width="200" height="200"
+                        <a href="https://youtu.be/rjKFt_cklcs">Acceso en datos en java<br><img src="img/Imagen3.jpg" width="200" height="200"
                                 alt="" /><br></a>
-            </ul>
-        </div>
-        </div>
-    </nav>
-
+                    </div>
+                    <div style="text-align: center" class="Imagenes">
+                        <a href="https://youtu.be/fIkd1UaQKSk">Fuente de Voltaje<br>
+                            <img src="img/imagen4.webp" width="200" height="200" alt="" /><br></a></li>
+                        <a href="https://youtu.be/rRPlo5Ew-Tg">Paquete Librerías<br><img src="img/imagen5.webp" width="200" height="200"
+                                alt="" /><br></a>
+                        <a href="https://youtu.be/uMXBSyL2n5Y">Linea de tiempo<br><img src="img/imagen6.webp" width="200" height="200"
+                                alt="" /><br></a>
+                </ul>
+            </div>
+            </div>
+        </nav>
+</Header>
 </body>
 
 </html>
