Se modican algunos codigos, donde se agrgaron FLEXBOX, BOOTSTRATP, JAVASCRIPT En algunas partes del pagina web

--- a/Contactame.html
+++ b/Contactame.html
@@ -18,15 +18,15 @@
             <h2>Contacteme</h2>
             <p>
                 Les presento un formulario en cual pueden mandar mensaje
-                en cualquier coso donde se nesite mi apoyo.
+                en cualquier coso donde se necesite mi apoyo.
             </p>
             <div class="contacto1">
-                <nav style="text-align: center" ; class="contacto-img">
+                <nav class="contacto-img">
                     <img src="img/mensaje.jpg" width="300" height="300" alt="" />
                 </nav>
                 <div class="contacto-img2">
                     <h4>ESCRIBEME</h4>
-                    <section action="">
+                    <section >
                         <div class="formagrupal">
                             <label for="name">Nombre<br></label>
                             <input type="text" class="formacontrol" />
