--- a/Habilidades.html
+++ b/Habilidades.html
@@ -10,36 +10,48 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>HABILIDADES</title>
-    <style>
-        body {
-            background-color: rgb(197, 114, 114);
-        }
-    </style>
+   
 </head>
-<header>
 <body>
-    <nav id="Habilidades">
-        <div class="Habilidad">
-            <h2>MIS HABILIDADES</h2>
-            <p>
-                Lo que les presento en esta parte son las habilidades que tengo,
-                cpara ofrecer en caso de algún trabajo!
-            </p>
+
+    <div id="conteiner">
+        <header id="Habilidad">
+            <a href="">
+                <img src="img/icono1.png" alt="" class="img-portafolio">
+                <h1 class="Texto1">Mis Habilidades</h1>
+            </a>
+        </header>
+
+        <section id="section">
+            <article class="card">
+                <img class="img-card" src="img/Analizar.jpg" alt="Random">
+                <div class="body-card">
+                    <h3>ANALIZA</h3>
+                </div>
+            </article>
+            <article class="card">
+                <img class="img-card" src="img/cambio.jpg" alt="Random">
+                <div class="body-card">
+                    <h3>CAMBIO</h3>
+                </div>
+            </article>
+            <article class="card">
+                <img class="img-card" src="img/Creativo.jpg" alt="Random">
+                <div class="body-card">
+                    <h3>CREATIVO</h3>
+                </div>
+            </article>
+            <article class="card">
+                <img class="img-card" src="img/Diseñar.jpg" alt="Random">
+                <div class="body-card">
+                    <h3>DISEÑO</h3>
+                </div>
         </section>
-        </div>
-        <ul>
-        <nav class="Imagenes">
-            <a href="#">Interpretación<img src="img/Interpretar.jpg" width="200" height="200" alt="" /></a>
-            <a href="#">Cambiar<img src="img/cambio.jpg" width="200" height="200" alt="" /></a>
-            <a href="#">Diseñar<img src="img/Diseñar.jpg" width="200" height="200" alt="" /></a>
-        </nav>
-        <nav class="Imagenes">
-            <a href="#">Interdiciplinado<img src="img/Inter.jpg" width="200" height="200" alt="" /></a>
-            <a href="#">Creativo<img src="img/Creativo.jpg" width="200" height="200" alt="" /></a>
-            <a href="#">Analiza<img src="img/analiza.png" width="200" height="200" alt="" /></a>
-        </nav>
-    </ul>
-        </div>
+
+        <footer id="pie">
+            <small>Derechos reservados &copy; 2010-2011</small>
+        </footer>
+        </div> 
 </header>
 </body>
 </html>
