--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/Stylo.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    
     <title>Portafilio web - Ricardo Tamay</title>
 </head>
 
@@ -16,7 +17,10 @@
     <header id="GENERAL">
         <nav id="menu">
             <div class="contenedor">
-                <label>Mi portafolio</label>
+                <a href="">
+                    <img src="img/carpeta.svg" alt="" class="img-portafolio">
+                    <h1>Mi Portafolio</h1>
+                </a>
                 <ul>
                     <li><a href="Habilidades.html" class="btn btn1">Habilidades</a></li>
                     <li><a href="Youtube.html" class="btn btn2">You tube</a></li>
@@ -49,6 +53,9 @@
                 </footer>
             </div>
     </header>
-</body>
 
+    <script src="js/main.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/Script.js"></script>
+</body>
 </html>
