--- a/Youtube.html
+++ b/Youtube.html
@@ -10,43 +10,61 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Mis videos</title>
-    <style>
-        body {
-            background-color: rgb(50, 161, 131);
-        }
-    </style>
 </head>
-<Header>
 
-    <body>
-        <nav id="Youtube">
-            <div class="videos">
-                <h2>MIS TRABAJOS</h2>
-                <p>
-                    Les presentare mis trabajos que he desarrollado a lorgo de semestre de primero a
-                    quinto semestre.
-                </p><br>
-                <ul>
-                    <div style="text-align: center" , class="Imagenes">
-                        <a href="https://youtu.be/b18dj_15Rxs">Elementos de un sistema<br><img src="img/Imagen1.png" width="200"
-                                height="200" /><br></a>
-                        <a href="https://youtu.be/8tWIkkdoCfU">Codificador de 7 segmentos<br><img src="img/Imagen2.jpg" width="200" height="200"
-                                alt="" /><br></a>
-                        <a href="https://youtu.be/rjKFt_cklcs">Acceso en datos en java<br><img src="img/Imagen3.jpg" width="200" height="200"
-                                alt="" /><br></a>
+<body>
+    <div id="contenedor">
+        <header class="videos">
+            <a href="">
+                    <img src="img/icono2.png" alt="" class="img-portafolio">
+                    <h1>Mis trabajos</h1>
+                </a>
+            <p>
+                Les presentare mis trabajos que he desarrollado a lorgo de semestre de primero a
+                quinto semestre.
+            </p>
+        </header>
+
+            <section id="contenedor">
+                <article id="sub_conte">
+                    <img class="img-1" src="img/Imagen1.png" alt="Random">
+                    <div class="body-card">
+                        <a href="https://youtu.be/b18dj_15Rxs" class="btn btn-card">Elementos de un sistema</a>
                     </div>
-                    <div style="text-align: center" class="Imagenes">
-                        <a href="https://youtu.be/fIkd1UaQKSk">Fuente de Voltaje<br>
-                            <img src="img/imagen4.webp" width="200" height="200" alt="" /><br></a></li>
-                        <a href="https://youtu.be/rRPlo5Ew-Tg">Paquete Librerías<br><img src="img/imagen5.webp" width="200" height="200"
-                                alt="" /><br></a>
-                        <a href="https://youtu.be/uMXBSyL2n5Y">Linea de tiempo<br><img src="img/imagen6.webp" width="200" height="200"
-                                alt="" /><br></a>
-                </ul>
-            </div>
-            </div>
-        </nav>
-</Header>
+                </article>
+                <article id="sub_conte">
+                    <img class="img-1" src="img/Imagen2.jpg" alt="Random">
+                    <div class="body-card">
+                        <a href="https://youtu.be/8tWIkkdoCfU" class="btn btn-card">Codificador de 7 segmentos</a>
+                    </div>
+                </article>
+                <article id="sub_conte">
+                    <img class="img-1" src="img/Imagen3.jpg" alt="Random">
+                    <div class="body-card">
+                        <a href="https://youtu.be/rjKFt_cklcs" class="btn btn-card">Acceso en datos en java</a>
+                    </div>
+                </article>
+                <article id="sub_conte">
+                    <img class="img-1" src="img/imagen5.jpg" alt="Random">
+                    <div class="body-card">
+                        <a href="https://youtu.be/fIkd1UaQKSk" class="btn btn-card">Fuente de voltaje</a>
+                    </div>
+                </article>
+                <article id="sub_conte">
+                    <img class="img-1" src="img/imagen6.jpg" alt="Random">
+                    <div class="body-card">
+                        <a href="https://youtu.be/rRPlo5Ew-Tg" class="btn btn-card">Paquete de librerias</a>
+                    </div>
+                </article>
+                <article id="sub_conte">
+                    <img class="img-1" src="img/imagen6.png" alt="Random">
+                    <div class="body-card">
+                        <a href="https://youtu.be/uMXBSyL2n5Y" class="btn btn-card">Linea de tiempo</a>
+                    </div>
+                </article>
+            </section>
+        </div>
+    </div>
 </body>
 
 </html>
